--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: 钱钱钱
 navbar-links:
   About Me: "aboutme"
   ccc: "www.baidu.com"
-  Resources: "https://deanattali.com"
+  Resources: 
     - Beautiful Jekyll: "https://king860810.github.io/beautiful-jekyll"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
