--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: 钱钱钱
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Projects: "aboutme"
+  Projects: "projects"
   Networks: "www.baidu.com"
   Community: "www.baidu.com"
   About: "https://deanattali.com"
