--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,16 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
+
+about-team-links:
+  email: "someone@example.com"
+  twitter: daattali
+  keybase: yourname
+  gitHub: daattali
+  linkedin: daattali
+  webpage: url
+  
+  
 rss-description: This website is a virtual proof that I'm awesome
 
 # --- General options --- #
