--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ title: Sikka
 # Your name to show in the footer
 author: Sikka
 
+# If you want to show a link to an RSS in the footer, add the site description here.
+# If you don't want to show an RSS link, remove the following line.
+rss-description: This website is a virtual proof that I'm awesome
+
 # --- List of links in the navigation bar --- #
 
 navbar-links:
