--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ title: Sikka
 # Your name to show in the footer
 author: Sikka
 
+
+description: This website is a virtual proof that I'm awesome
+
 # --- List of links in the navigation bar --- #
 
 navbar-links:
