--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,14 @@ about-team-links-3:
   
 about-team-links-4:
   photoUrl: Kevin-Cheng.jpeg
+  email: "joon@sikka.tech"
+#  twitter: chenggong8966
+#  keybase: yourname
+  gitHub: mconcat
+#  linkedin: gong-cheng-584ab514a
+  
+about-team-links-5:
+  photoUrl: Kevin-Cheng.jpeg
   email: "kevin@sikka.tech"
   twitter: chenggong8966
 #  keybase: yourname
