--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ about-team-links-3:
 #  webpage: url
   
 about-team-links-4:
-  photoUrl: Kevin-Cheng.jpeg
+  photoUrl: Joon-Yun.jpeg
   email: "joon@sikka.tech"
 #  twitter: chenggong8966
 #  keybase: yourname
